[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/Bottom UI v 2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/bottom_ui.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BoosterManager.gd" type="Script" id=3]
[ext_resource path="res://art/UI/Pause Button.png" type="Texture" id=4]
[ext_resource path="res://art/UI/Make Color Bomb Button.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Booster.gd" type="Script" id=6]
[ext_resource path="res://art/UI/Plus Ten Seconds Button.png" type="Texture" id=7]
[ext_resource path="res://art/UI/Mallet Button.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Kenney Future.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0.203922, 0.235294, 0.270588, 1 )
font_data = ExtResource( 9 )

[node name="bottom_ui" type="TextureRect"]
margin_top = 932.0
margin_right = 576.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_right = 557.0
margin_bottom = 64.0
custom_constants/margin_right = 0
custom_constants/margin_top = -50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_top = -50.0
margin_right = 537.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/separation = 36
alignment = 1
script = ExtResource( 3 )

[node name="Pause" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_right = 107.0
margin_bottom = 114.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Booster1" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 143.0
margin_right = 250.0
margin_bottom = 114.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
script = ExtResource( 6 )
add_to_counter_texture = ExtResource( 7 )
make_color_bomb_texture = ExtResource( 5 )
destroy_piece_texture = ExtResource( 8 )

[node name="NumberLabel" type="Label" parent="MarginContainer/HBoxContainer/Booster1"]
margin_left = -6.82745
margin_top = -7.8028
margin_right = 30.1725
margin_bottom = 29.1972
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Booster2" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 286.0
margin_right = 393.0
margin_bottom = 114.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5
script = ExtResource( 6 )
add_to_counter_texture = ExtResource( 7 )
make_color_bomb_texture = ExtResource( 5 )
destroy_piece_texture = ExtResource( 8 )

[node name="NumberLabel" type="Label" parent="MarginContainer/HBoxContainer/Booster2"]
margin_left = -1.62744
margin_top = -6.85278
margin_right = 35.3726
margin_bottom = 30.1472
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Booster3" type="TextureButton" parent="MarginContainer/HBoxContainer" groups=[
"Boosters",
]]
margin_left = 429.0
margin_right = 537.0
margin_bottom = 114.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5
script = ExtResource( 6 )
add_to_counter_texture = ExtResource( 7 )
make_color_bomb_texture = ExtResource( 5 )
destroy_piece_texture = ExtResource( 8 )

[node name="NumberLabel" type="Label" parent="MarginContainer/HBoxContainer/Booster3"]
margin_left = -5.92743
margin_top = -5.90277
margin_right = 31.0726
margin_bottom = 31.0972
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
[connection signal="consume_booster" from="." to="MarginContainer/HBoxContainer/Booster1" method="_on_bottom_ui_consume_booster"]
[connection signal="undo_booster" from="." to="MarginContainer/HBoxContainer/Booster2" method="_on_bottom_ui_undo_booster"]
[connection signal="undo_booster" from="." to="MarginContainer/HBoxContainer/Booster1" method="_on_bottom_ui_undo_booster"]
[connection signal="undo_booster" from="." to="MarginContainer/HBoxContainer/Booster3" method="_on_bottom_ui_undo_booster"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster1" to="MarginContainer/HBoxContainer/Booster1" method="_on_Booster1_pressed"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster1" to="MarginContainer/HBoxContainer/Booster2" method="_on_Booster1_reset_others"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster1" to="MarginContainer/HBoxContainer/Booster3" method="_on_Booster1_reset_others"]
[connection signal="used" from="MarginContainer/HBoxContainer/Booster1" to="." method="_on_Booster1_used"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster2" to="MarginContainer/HBoxContainer/Booster2" method="_on_Booster2_pressed"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster2" to="MarginContainer/HBoxContainer/Booster1" method="_on_Booster2_reset_others"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster2" to="MarginContainer/HBoxContainer/Booster3" method="_on_Booster2_reset_others"]
[connection signal="used" from="MarginContainer/HBoxContainer/Booster2" to="." method="_on_Booster2_used"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Booster3" to="MarginContainer/HBoxContainer/Booster3" method="_on_Booster3_pressed"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster3" to="MarginContainer/HBoxContainer/Booster2" method="_on_Booster3_reset_others"]
[connection signal="reset_others" from="MarginContainer/HBoxContainer/Booster3" to="MarginContainer/HBoxContainer/Booster1" method="_on_Booster3_reset_others"]
[connection signal="used" from="MarginContainer/HBoxContainer/Booster3" to="." method="_on_Booster3_used"]
